--- a/package.json
+++ b/package.json
@@ -1,81 +1,73 @@
 {
   "name": "vue-business-form",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": false,
-  "main": "src/index.js",
-  "files": [
-    "fields",
-    "forms",
-    "plugins",
-    "src"
-  ],
+  "description": "A Vue form plugin",
+  "author": "JackFGreen",
   "scripts": {
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "field": "node bin/field.js",
-    "prettier": "prettier --config ./.prettierrc --write 'src/**/*.{js,vue,scss,json}'",
-    "lint": "standard --plugin html 'src/**/*.{js,vue}' --verbose | snazzy",
-    "fix": "standard --plugin html 'src/**/*.{js,vue}' --fix --verbose | snazzy",
-    "format": "yarn prettier && yarn fix && yarn lint",
-    "commit": "npx git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
+    "format": "yarn prettier && yarn lint",
+    "prettier": "prettier --config ./.prettierrc --write 'src/**/*.{js,vue,scss,json}'"
   },
-  "peerDependencies": {
-    "vue": "^2.5.21"
+  "dependencies": {
+    "merge": "^1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.4.0",
     "@commitlint/config-angular": "^7.3.1",
+    "@vue/cli-plugin-eslint": "^3.5.1",
+    "@vue/cli-service": "^3.5.1",
+    "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "conventional-changelog-cli": "^2.0.11",
     "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.1",
-    "snazzy": "^8.0.0",
-    "standard": "^12.0.1"
+    "snazzy": "^8.0.0"
   },
-  "standard": {
-    "plugins": [
-      "html"
-    ],
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "ignore": [
-      "node_modules/**",
-      "dist/**",
-      "static/**",
-      "test/**"
-    ]
+  "bugs": {
+    "url": "https://github.com/JackFGreen/vue-business-form/issues"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-angular"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "files": [
+    "dist",
+    "fields",
+    "forms",
+    "plugins",
+    "src"
+  ],
+  "homepage": "https://github.com/JackFGreen/vue-business-form#readme",
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "yarn lint"
     }
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "license": "MIT",
-  "description": "A Vue form plugin",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
-  },
   "keywords": [
     "vue",
     "form"
   ],
-  "author": "JackFGreen",
-  "bugs": {
-    "url": "https://github.com/JackFGreen/vue-business-form/issues"
+  "license": "MIT",
+  "main": "src/index.js",
+  "peerDependencies": {
+    "vue": "^2.5.21"
   },
-  "homepage": "https://github.com/JackFGreen/vue-business-form#readme"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
+  }
 }
