--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
   "name": "vue-business-form",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": false,
   "description": "A Vue form plugin",
   "author": "JackFGreen",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JackFGreen/vue-business-form/issues"
+  },
+  "license": "MIT",
+  "main": "dist/VueBusinessForm.common.js",
+  "unpkg": "dist/VueBusinessForm.umd.min.js",
   "scripts": {
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name VueBusinessForm src/index.js",
     "lint": "vue-cli-service lint",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "field": "node bin/field.js",
     "format": "yarn prettier && yarn lint",
     "prettier": "prettier --config ./.prettierrc --write 'src/**/*.{js,vue,scss,json}'"
+  },
+  "keywords": [
+    "vue",
+    "form"
+  ],
+  "peerDependencies": {
+    "vue": "^2.5.21"
   },
   "dependencies": {
     "merge": "^1.2.1"
@@ -18,6 +35,7 @@
   "devDependencies": {
     "@commitlint/cli": "^7.4.0",
     "@commitlint/config-angular": "^7.3.1",
+    "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-standard": "^4.0.0",
@@ -28,10 +46,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.1",
-    "snazzy": "^8.0.0"
-  },
-  "bugs": {
-    "url": "https://github.com/JackFGreen/vue-business-form/issues"
+    "snazzy": "^8.0.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "commitlint": {
     "extends": [
@@ -55,18 +71,5 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "yarn lint"
     }
-  },
-  "keywords": [
-    "vue",
-    "form"
-  ],
-  "license": "MIT",
-  "main": "src/index.js",
-  "peerDependencies": {
-    "vue": "^2.5.21"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
   }
 }
