--- a/package.json
+++ b/package.json
@@ -1,61 +1,49 @@
 {
   "name": "vue-business-form",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "private": false,
   "description": "A Vue form plugin",
   "author": "JackFGreen",
-  "homepage": "https://github.com/JackFGreen/vue-business-form#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
-  },
-  "bugs": {
-    "url": "https://github.com/JackFGreen/vue-business-form/issues"
-  },
-  "license": "MIT",
-  "files": [
-    "dist",
-    "fields",
-    "forms",
-    "plugins",
-    "src"
-  ],
-  "main": "dist/VueBusinessForm.common.js",
-  "unpkg": "dist/VueBusinessForm.umd.min.js",
   "scripts": {
     "build": "vue-cli-service build --target lib --name VueBusinessForm src/index.js",
+    "test": "jest",
     "lint": "vue-cli-service lint",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "field": "node bin/field.js",
     "format": "yarn prettier && yarn lint",
     "prettier": "prettier --config ./.prettierrc --write 'src/**/*.{js,vue,scss,json}'"
   },
-  "keywords": [
-    "vue",
-    "form"
-  ],
-  "peerDependencies": {
-    "vue": "^2.5.21"
-  },
   "dependencies": {
     "merge": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@commitlint/cli": "^7.4.0",
     "@commitlint/config-angular": "^7.3.1",
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
+    "@vue/cli-plugin-unit-jest": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "conventional-changelog-cli": "^2.0.11",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "husky": "^1.3.1",
+    "jest": "^24.5.0",
     "prettier": "^1.16.1",
     "snazzy": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.6.10"
+  },
+  "bugs": {
+    "url": "https://github.com/JackFGreen/vue-business-form/issues"
   },
   "commitlint": {
     "extends": [
@@ -67,10 +55,30 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "files": [
+    "dist",
+    "fields",
+    "forms",
+    "plugins",
+    "src"
+  ],
+  "homepage": "https://github.com/JackFGreen/vue-business-form#readme",
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint"
+      "pre-commit": "yarn lint && yarn test"
     }
-  }
+  },
+  "keywords": [
+    "vue",
+    "form"
+  ],
+  "license": "MIT",
+  "main": "dist/VueBusinessForm.common.js",
+  "peerDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JackFGreen/vue-business-form.git"
+  },
+  "unpkg": "dist/VueBusinessForm.umd.min.js"
 }
